--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.main.log-startup-info=true
 
 spring.ai.openai.api-key=${MY_OPENAPI_KEY}
 spring.ai.openai.chat.options.model=gpt-4o-mini
+
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
