--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,14 @@ spring.main.log-startup-info=true
 
 spring.ai.openai.api-key=${MY_OPENAPI_KEY}
 spring.ai.openai.chat.options.model=gpt-4o-mini
+spring.ai.openai.embedding.options.dimensions=1536
+spring.ai.azure.openai.chat.options.model=gpt-4o-mini
+spring.ai.openai.embedding.options.model=text-embedding-3-small
+spring.ai.openai.embedding.options.encoding-format=float
 
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
+
+spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=neo4j
+spring.ai.vectorstore.neo4j.initialize-schema=true
